Bug 214855 - S0ix: resume on lid close on ThinkPad X1 Carbon Gen 9
Summary: S0ix: resume on lid close on ThinkPad X1 Carbon Gen 9
Status: RESOLVED CODE_FIX
Alias: None
Product: Power Management
Classification: Unclassified
Component: Hibernation/Suspend (show other bugs)
Hardware: x86-64 Linux
: P1 normal
Assignee: Rafael J. Wysocki
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-27 21:09 UTC by Thomas Weißschuh
Modified: 2022-02-14 10:43 UTC (History)
3 users (show)

See Also:
Kernel Version: 5.14.14, 5.15-rc7
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmidecode (22.16 KB, text/plain)
2021-10-27 21:09 UTC, Thomas Weißschuh
Details
lspci -vvnn (44.71 KB, text/plain)
2021-10-27 21:10 UTC, Thomas Weißschuh
Details
ACPI DSDT (1.48 MB, text/x-csrc)
2021-10-27 21:10 UTC, Thomas Weißschuh
Details

Description Thomas Weißschuh 2021-10-27 21:09:44 UTC
Created attachment 299343 [details]
dmidecode

When suspending the machine via s2idle and then closing the lid, the machine will wake up again.

Debugging has show that before the normal ACPI interrupt is received another interrupt from the internal sensor hub (ISH) is received which unconditionally triggers a wakeup.

The problem can avoided in one of the following ways:
* add to the kernel cmdline: modprobe.blacklist=intel_ish_ipc
* remove the calls to enable_irq_wake()/disable_irq_wake() in drivers/hid/intel-ish-hid/ipc/pci-ish.c

This happens on the latest kernel and UEFI.
Comment 1 Thomas Weißschuh 2021-10-27 21:10:12 UTC
Created attachment 299345 [details]
lspci -vvnn
Comment 2 Thomas Weißschuh 2021-10-27 21:10:51 UTC
Created attachment 299347 [details]
ACPI DSDT
Comment 3 Thomas Weißschuh 2021-11-26 14:12:44 UTC
Seems to also affect X1 Yoga Gen6 (which is mostly the same device):
https://forums.lenovo.com/t5/Other-Linux-Discussions/Wake-from-suspend-on-lid-close-on-X1-Yoga-Gen6-under-Linux/m-p/5085290
Comment 4 Thomas Weißschuh 2021-12-09 19:46:42 UTC
This is going to be fixed in 5.16 through
https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/commit/?id=086e81f6b90e41a07a1a885bb11e93daa6915747

(Which will most probably be backported to stable kernels, too)

Note You need to log in before you can comment on or make changes to this bug.